--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face{
-    font-family: buttermilk;
+    font-family: "sans";
     src: url(./sans.woff2);
 }
 
@@ -13,4 +13,65 @@
 html,body{
     width: 100%;
     height: 100%;
+    font-family: 'sans';
+    font-size: 10px;
+    background: #19172e;
+    user-select: none;
 }
+
+h1{
+    font-size: 5.5rem;
+    color: #FEFFE2;
+    font-family: "Arvo", cursive;
+    text-align: center;
+}
+
+span{
+    font-weight: 100;
+}
+
+.keys{
+    display: flex;
+    flex: 1;
+    min-height: 40vh;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.key{
+    border: .4rem solid white;
+    border-radius: .5rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    padding: 1rem .5rem;
+    transition: all .07s ease;
+    width: 10rem;
+    text-align: center;
+    color: white;
+    background-color: #212121;
+}
+
+.playing{
+    transform: scale(1.1);
+    border-color: #bb86fc;
+    box-shadow: 0 0 1rem #bb86fc;
+}
+
+kbd{
+    display: block;
+    font-size: 4rem;
+}
+
+.sound{
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    color: #bb86fc;
+}
+
+kbd{
+    cursor: pointer;
+}
+
